# TorrentDeck

./: CLAUDE.md  README.md  cliff.toml  index.html  package.json
.github/workflows/: build.yml
.husky/: pre-commit
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/downloader/: mod.rs  qbittorrent.rs  transmission.rs
src/components/layout/: ConnectionPanel.tsx  Sidebar.tsx
src/hooks/: use-connection.tsx
src/pages/: CrossTracker.tsx  Dashboard.tsx  Search.tsx  TrackerReplace.tsx
