[package]
name = "tracker-relo"
version = "0.1.0"
edition = "2021"

[lib]
name = "tracker_relo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
url = "2"
dirs = "6"
base64 = "0.22"
log = "0.4"
tauri-plugin-log = "2"
